Revert "Changes from QCT1030"
This reverts commit 595fe236efb98ad25ea01f1c66c3027a858c512d.